#1131 Customer address edit form CSP compatibility

--- a/Magento_Customer/layout/customer_account.xml
+++ b/Magento_Customer/layout/customer_account.xml
@@ -65,5 +65,13 @@
                 </block>
             </block>
         </referenceContainer>
+
+        <referenceBlock name="topmenu_generic">
+            <!-- Disable block_html caching on the un-cached customer pages, because the top menu is shared with cached pages. -->
+            <!-- Otherwise the script tags will be used on FPC pages with (wrong) nonce attribute values, while they should be enabled through shas there. -->
+            <arguments>
+                <argument name="cache_lifetime" xsi:type="string">0</argument>
+            </arguments>
+        </referenceBlock>
     </body>
 </page>
