--- a/Magento_Checkout/layout/checkout_cart_index.xml
+++ b/Magento_Checkout/layout/checkout_cart_index.xml
@@ -24,7 +24,7 @@
 
         <referenceBlock name="topmenu_generic">
             <!-- Disable block_html caching on the un-cached cart page, because the top menu is shared with cached pages. -->
-            <!-- Othwerwise the script tags will be used on FPC pages with (wrong) nonce attribute values, while they should be enabled through shas there. -->
+            <!-- Otherwise the script tags will be used on FPC pages with (wrong) nonce attribute values, while they should be enabled through shas there. -->
             <arguments>
                 <argument name="cache_lifetime" xsi:type="string">0</argument>
             </arguments>
