--- a/Magento_Customer/templates/address/grid.phtml
+++ b/Magento_Customer/templates/address/grid.phtml
@@ -24,13 +24,11 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 <div class="block block-addresses-list">
     <div class="block-title text-2xl mb-6">
 <?= $escaper->escapeHtml(__('Address Book')) ?></div>
-    <div class="block-content" x-data="initAddresses()">
+    <div class="block-content" x-data="initAddresses">
         <?php if ($additionalAddresses = $block->getAdditionalAddresses()): ?>
             <div class="card grid grid-cols-3 lg:grid-cols-6 my-6">
                 <div class="text-sm text-secondary p-2">
-                    <?= $escaper->escapeHtml(
-                        __('Company')
-                    ) ?></div>
+                    <?= $escaper->escapeHtml(__('Company')) ?></div>
                 <div class="hidden lg:block text-sm text-secondary p-2">
                     <?= $escaper->escapeHtml(__('Name')) ?>
                 </div>
@@ -74,7 +72,9 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                         </a>
                         <a class="action delete ml-2 inline-block text-sm underline text-secondary-darker"
                            title="<?= $escaper->escapeHtmlAttr(__('Delete')) ?>"
-                           @click.prevent="deleteAddressById(<?= $escaper->escapeJs($address->getId()) ?>)" href="#">
+                           @click.prevent="deleteAddressById"
+                           data-address-id="<?= $escaper->escapeJs($address->getId()) ?>"
+                           href="#">
                             <?= $heroicons->trashHtml(); ?>
                         </a>
                     </div>
@@ -95,22 +95,25 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
         <script>
             function initAddresses() {
                 return {
-                    deleteAddressById(id) {
+                    deleteAddressById() {
+                        const id = this.$el.dataset.addressId;
                         if (window.confirm(
                             '<?= $escaper->escapeJs(__('Are you sure you want to delete this address?')) ?>'
                         )) {
-                            hyva.postForm(
-                                {
-                                    "action": '<?= $escaper->escapeJs($block->getDeleteUrl()) ?>',
-                                    "data": {
-                                        "id": id
-                                    }
+                            hyva.postForm({
+                                action: '<?= $escaper->escapeJs($block->getDeleteUrl()) ?>',
+                                data: {
+                                    id: id
                                 }
-                            );
+                            });
                         }
                     }
                 }
             }
+            (() => {
+                const initFn = () => Alpine.data('initAddresses', initAddresses);
+                window.Alpine ? initFn() : window.addEventListener('alpine:init', initFn, {once: true})
+            })()
         </script>
         <?php $hyvaCsp->registerInlineScript() ?>
     </div>
