IMP: make sure there is always a aria-label set for the region

--- a/Magento_Catalog/templates/product/slider/product-slider-container.phtml
+++ b/Magento_Catalog/templates/product/slider/product-slider-container.phtml
@@ -144,7 +144,7 @@ $slideItemClasses = $block->getData('maybe_purged_tailwind_slide_item_classes') 
     x-id="['slider-nav', 'slider-desc', 'slider-id']"
     @resize.window.debounce="calcPageSize(); $nextTick( function() { calcActive() })"
     aria-roledescription="<?= $escaper->escapeHtmlAttr(__('Carousel')) ?>"
-    aria-label="<?= $escaper->escapeHtmlAttr($title) ?>"
+    aria-label="<?= $escaper->escapeHtmlAttr($title ?: $name) ?>"
     :aria-describedby="$id('slider-desc')"
     x-defer="intersect"
 >
