IMP: avoid extra changes
Now also drop the div's used to check, for a clean html

--- a/Magento_Checkout/templates/php-cart/coupon.phtml
+++ b/Magento_Checkout/templates/php-cart/coupon.phtml
@@ -92,9 +92,10 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                     x-model="formData.coupon_code"
                     x-ref="couponInput"
                     placeholder="<?= $escaper->escapeHtmlAttr(__('Enter discount code')) ?>"
-                    required
                     <?php if ($hasCouponCode): ?>
                         disabled
+                    <?php else: ?>
+                        required
                     <?php endif; ?>
                 >
             </div>
